# STM32CubeMX_cmake

./: CMakeIgnore.txt  CMakeLists.txt  CMakeSetCompiler.cmake  CubeMX2_cmake.py  Readme.md  readme.txt
cmake/: CMakeSetCompiler.cmake  ExecutableFromMakefile.cmake  GlobSrcAndHeaders.cmake  STM32CommonTarget.cmake  STM32_flash.cmake
